tests/try/try.exp
Error: init.js:34
 34:     var y:number = x; // error
                        ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
   32:     var x:number = 0;
               ^ [1]: possibly uninitialized variable
   34:     var y:number = x; // error
                 ^^^^^^ [2]: number

Error: init.js:44
 44:     var y:number = x; // error
                        ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
   42:     var x:number = 0;
               ^ [1]: possibly uninitialized variable
   44:     var y:number = x; // error
                 ^^^^^^ [2]: number

Error: init.js:54
 54:     var y:number = x; // error
                        ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
   52:     var x:number = 0;
               ^ [1]: possibly uninitialized variable
   54:     var y:number = x; // error
                 ^^^^^^ [2]: number

Error: init.js:66
 66:     var y:number = x; // error
                        ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
   61:     var x:number = 0;
               ^ [1]: possibly uninitialized variable
   66:     var y:number = x; // error
                 ^^^^^^ [2]: number

Error: init.js:118
118:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].
  References:
  120:     var x:number = 0;
               ^ [1]: uninitialized variable
  118:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: init.js:131
131:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
  128:     var x:number = 0;
               ^ [1]: possibly uninitialized variable
  131:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: init.js:140
140:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
  138:     var x:number = 0;
               ^ [1]: possibly uninitialized variable
  140:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: init.js:153
153:   var y:number = x; // error
                      ^ Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].
  References:
  146:     var x:number;
               ^ [1]: possibly uninitialized variable
  153:   var y:number = x; // error
               ^^^^^^ [2]: number

Error: return.js:28
 28:   return "bar"; // unreachable
       ^^^^^^^^^^^^^ unreachable code

Error: return.js:64
 64:   bar(); // unreachable
       ^^^^^^ unreachable code

Error: test.js:18
 18:     x(); // string ~/> function call (no num or bool error)
         ^^^ call of `x`. Function cannot be called on
 18:     x(); // string ~/> function call (no num or bool error)
         ^ string

Error: test.js:19
 19:     y(); // object ~/> function call (no uninitialized error)
         ^ Cannot call `y` because a callable signature is missing in object literal [1].
  References:
   15:         y = {};
                   ^^ [1]: object literal

Error: test.js:41
 41:     x(); // unreachable
         ^^^^ unreachable code


Found 13 errors
